# raytracing-cpu

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  Hittable.h  HittableList.cpp  HittableList.h  Interval.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  image.cpp  image.h  main.cpp
src/Fold/: head.h
